Correcting label elements alignment in fe objects

--- a/admin/assets/less/layoutmanager.less
+++ b/admin/assets/less/layoutmanager.less
@@ -217,7 +217,7 @@ body.mura-sidebar-state__pushed--right .mura__layout-manager__controls {
 	    min-width: 64px;
 	    height: 24px;
 	    letter-spacing: .025em;
-	    padding: 2px 16px 2px 31px;
+	    padding: 1px 16px 2px 31px;
 	    position: absolute;
 	    top: 2px;
 	    right: 2px;
@@ -231,7 +231,7 @@ body.mura-sidebar-state__pushed--right .mura__layout-manager__controls {
 			font-weight: normal;
 	    position: absolute;
 	    left: 12px;
-	    top: 1px;
+	    top: 0;
 		}
 
 		&:not([class*="mi-"]):before{
